[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = "0.14"
coap-lite = "0.11.3"
tokio = {version = "^1.32", features = ["full"]}
serde_json = "1.0"
once_cell = "1.8.0"
lazy_static = "1.4"
rand = "0.8.4"
socket2 = "0.5.6"

